--- a/administrator/LaporanBulananPegawai.html
+++ b/administrator/LaporanBulananPegawai.html
@@ -348,6 +348,18 @@
                                                 <td class="text-center">Dinas Kantor</td>
                                                 <td class="text-center">Mesin</td>
                                             </tr>
+                                            <tr class="bg-danger bg-opacity-50 tx-danger">
+                                                <td class="text-center">03/01/2023</td>
+                                                <td class="text-center">
+                                                    <p class="mg-0">00:00:00</p>
+                                                </td>
+                                                <td class="text-center">00:00:00</td>
+                                                <td class="text-center">0</td>
+                                                <td class="text-center">4,83</td>
+                                                <td class="text-center">0</td>
+                                                <td class="text-center">-</td>
+                                                <td class="text-center">-</td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
