--- a/administrator/WaktuKerja.html
+++ b/administrator/WaktuKerja.html
@@ -258,18 +258,40 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label for="Hari" class="col-sm-3 col-form-label tx-bold">Hari <span class="tx-danger">*</span></label>
+                                            <label for="Hari" class="col-sm-3 col-form-label tx-bold">Hari Kerja <span class="tx-danger">*</span></label>
                                             <div class="col-sm-9">
-                                                <select class="form-select select2" multiple id="Hari" name="Hari" required>
-                                                    <option label="Pilihan"></option>
-                                                    <option value="Senin">Pilih Semua</option>
-                                                    <option value="Senin">Senin</option>
-                                                    <option value="Selasa">Selasa</option>
-                                                    <option value="Rabu">Rabu</option>
-                                                    <option value="Kamis">Kamis</option>
-                                                    <option value="Jum'at">Jum'at</option>
-                                                    <option value="Sabtu">Sabtu</option>
-                                                </select>
+                                                <div class="custom-control custom-checkbox">
+                                                    <input type="checkbox" class="custom-control-input" name="HariKerja[]" id="checkAllHariKerja" value="Semua">
+                                                    <label class="custom-control-label">Semua</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Senin">
+                                                    <label class="custom-control-label">Senin</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Selasa">
+                                                    <label class="custom-control-label">Selasa</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Rabu">
+                                                    <label class="custom-control-label">Rabu</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Kamis">
+                                                    <label class="custom-control-label">Kamis</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Jumat">
+                                                    <label class="custom-control-label">Jumat</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Sabtu">
+                                                    <label class="custom-control-label">Sabtu</label>
+                                                </div>
+                                                <div class="form-check-inline">
+                                                    <input type="checkbox" class="custom-control-input hariKerja" name="HariKerja[]" value="Minggu">
+                                                    <label class="custom-control-label">Minggu</label>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -392,6 +414,19 @@
                     },
                 });
 
+                document.getElementById('checkAllHariKerja').addEventListener('change', function () {
+                    const allCheckboxes = document.querySelectorAll('.hariKerja');
+                    allCheckboxes.forEach(cb => cb.checked = this.checked);
+                });
+
+                // Sinkronisasi checkbox utama jika user uncheck salah satu
+                const hariCheckboxes = document.querySelectorAll('.hariKerja');
+                hariCheckboxes.forEach(cb => {
+                    cb.addEventListener('change', () => {
+                    const allChecked = [...hariCheckboxes].every(c => c.checked);
+                    document.getElementById('checkAllHariKerja').checked = allChecked;
+                    });
+                });
 
                 $('.select2').select2({
                     placeholder: 'Pilihan',
