--- a/administrator/SkemaKerja.html
+++ b/administrator/SkemaKerja.html
@@ -252,12 +252,6 @@
                                 <div class="modal-body">
                                     <form>
                                         <div class="form-group row">
-                                            <label for="NamaSkema" class="col-sm-3 col-form-label tx-bold">Nama Skema <span class="tx-danger">*</span></label>
-                                            <div class="col-sm-9">
-                                                <input type="text" class="form-control" id="NamaSkema" placeholder="Masukkan Nama Skema" required />
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
                                             <label for="TipeKerja" class="col-sm-3 col-form-label tx-bold">Tipe Kerja <span class="tx-danger">*</span></label>
                                             <div class="col-sm-9">
                                                 <select class="form-select select2">
@@ -265,6 +259,16 @@
                                                     <option value="Dinas">Dinas Kantor</option>
                                                     <option value="WFH">Work From Home (WFH)</option>
                                                     <option value="WFA">Work From Anyware (WFA)</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label for="NamaSkema" class="col-sm-3 col-form-label tx-bold">Skema Kerja <span class="tx-danger">*</span></label>
+                                            <div class="col-sm-9">
+                                                <select class="form-select select2">
+                                                    <option label="Pilih Skema Kerja"></option>
+                                                    <option value="Senin-Kamis (5 Hari Kerja)" selected>Senin-Kamis (5 Hari Kerja)</option>
+                                                    <option value="Jumat (5 Hari Kerja)">Jumat (5 Hari Kerja)</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -280,30 +284,15 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label for="Hari" class="col-sm-3 col-form-label tx-bold">Hari <span class="tx-danger">*</span></label>
-                                            <div class="col-sm-9">
-                                                <select class="form-select select2" multiple id="Hari" name="Hari" required>
-                                                    <option label="Pilihan"></option>
-                                                    <option value="Senin">Pilih Semua</option>
-                                                    <option value="Senin">Senin</option>
-                                                    <option value="Selasa">Selasa</option>
-                                                    <option value="Rabu">Rabu</option>
-                                                    <option value="Kamis">Kamis</option>
-                                                    <option value="Jum'at">Jum'at</option>
-                                                    <option value="Sabtu">Sabtu</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
                                             <label for="AbsenDatang" class="col-sm-3 col-form-label tx-bold">Absen Datang <span class="tx-danger">*</span></label>
                                             <div class="col-sm-9">
-                                                <input type="time" step="1" class="form-control" id="AbsenDatang" placeholder="Masukkan Absen Datang" required />
+                                                <input type="text" class="form-control" id="AbsenDatang" value="07:30:00" readonly disabled/>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="AbsenPulang" class="col-sm-3 col-form-label tx-bold">Absen Pulang <span class="tx-danger">*</span></label>
                                             <div class="col-sm-9">
-                                                <input type="time" step="1" class="form-control" id="AbsenPulang" placeholder="Masukkan Absen Pulang" required />
+                                                <input type="text" class="form-control" id="AbsenPulang" value="16:00:00" readonly disabled/>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -333,10 +322,9 @@
                                     <thead class="thead-primary">
                                         <tr>
                                             <th>No.</th>
-                                            <th>Nama Skema</th>
                                             <th>Tipe Kerja</th>
+                                            <th>Skema Kerja</th>
                                             <th>SKPD</th>
-                                            <th>Hari</th>
                                             <th>Waktu Datang</th>
                                             <th>Waktu Pulang</th>
                                             <th>Status</th>
@@ -346,10 +334,9 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>Senin-Kamis (5 Hari Kerja)</td>
                                             <td>Dinas Kantor</td>
+                                            <td>Senin-Kamis (5 Hari Kerja)</td>
                                             <td>Dinas Pendidikan, Dinas Kesehatan</td>
-                                            <td>["Senin","Selasa","Rabu","Kamis"]</td>
                                             <td>07:30:00</td>
                                             <td>16:00:00</td>
                                             <td>Ya</td>
@@ -360,10 +347,9 @@
                                         </tr>
                                         <tr>
                                             <td>1</td>
-                                            <td>Jumat (5 Hari Kerja)</td>
                                             <td>Dinas Kantor</td>
+                                            <td>Jumat (5 Hari Kerja)</td>
                                             <td>Dinas Pendidikan, Dinas Kesehatan</td>
-                                            <td>["Jumat"]</td>
                                             <td>07:30:00</td>
                                             <td>16:30:00</td>
                                             <td>Ya</td>
