--- a/administrator/PengajuanDinas.html
+++ b/administrator/PengajuanDinas.html
@@ -166,7 +166,7 @@
 
                     <!-- Pengajuan Ketidakhadiran -->
                     <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
-                    <li class="nav-item with-sub active show">
+                    <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
                         <ul>
                             <li class="active"><a href="PengajuanDinas.html">Pengajuan</a></li>
