Add Menu  konsep-absensi

--- a/administrator/LogAktivitas.html
+++ b/administrator/LogAktivitas.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="aside-loggedin-user">
                         <a href="#loggedinMenu" class="d-flex align-items-center justify-content-between mg-b-2" data-bs-toggle="collapse">
-                            <h6 class="tx-semibold mg-b-0">Tri Akhyari Romadhon</h6>
+                            <h6 class="tx-semibold mg-b-0">John Doe</h6>
                             <i data-feather="chevron-down"></i>
                         </a>
                         <p class="tx-color-03 tx-12 mg-b-0">Super Administrator</p>
@@ -239,7 +239,7 @@
                             <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
                             <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
                             <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
-                            <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
+                            <li><a href="RiwayatLogAbsensi.html">Log Absensi Mobile</a></li>
                         </ul>
                     </li>
                 </ul>
