--- a/administrator/AgendaDetailPegawai.html
+++ b/administrator/AgendaDetailPegawai.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="aside-loggedin-user">
                         <a href="#loggedinMenu" class="d-flex align-items-center justify-content-between mg-b-2" data-bs-toggle="collapse">
-                            <h6 class="tx-semibold mg-b-0">Tri Akhyari Romadhon</h6>
+                            <h6 class="tx-semibold mg-b-0">John Doe</h6>
                             <i data-feather="chevron-down"></i>
                         </a>
                         <p class="tx-color-03 tx-12 mg-b-0">Super Administrator</p>
@@ -176,8 +176,12 @@
 
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
-                    <li class="nav-item">
-                        <a href="AgendaPegawai.html" class="nav-link"><i data-feather="archive"></i> <span>Agenda Pegawai</span></a>
+                    <li class="nav-item with-sub active show">
+                        <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
+                        <ul>
+                            <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
+                            <li class="active"><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="clock"></i> <span>Jadwal Pegawai</span></a>
@@ -203,13 +207,13 @@
                             <li><a href="AbsensiMobilePegawai.html">Absensi Mobile Pegawai</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item with-sub active show">
+                    <li class="nav-item with-sub">
                         <a href="" class="nav-link"><i data-feather="book"></i> <span>Laporan Presensi</span></a>
                         <ul>
-                            <li class="active"><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
+                            <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
                             <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
                             <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
-                            <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
+                            <li><a href="RiwayatLogAbsensi.html">Log Absensi Mobile</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -234,10 +238,10 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
                                     <li class="breadcrumb-item"><a href="#">Monitoring Absensi</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Laporan Presensi</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Agenda Pegawai</li>
                                 </ol>
                             </nav>
-                            <h4 class="mg-b-0 tx-spacing--1">Laporan Presensi Pegawai</h4>
+                            <h4 class="mg-b-0 tx-spacing--1">Detail Agenda Pegawai</h4>
                         </div>
                         <div class="d-none d-md-block"></div>
                     </div>
@@ -300,7 +304,7 @@
                     </div>
                     <div class="row row-xs">
                         <div class="col-sm-12 col-lg-12">
-                            <div data-label="Laporan Presensi Pegawai" class="df-example demo-table">
+                            <div data-label="Detail Agenda Pegawai" class="df-example demo-table">
                                 <div class="table-responsive">
                                     <table id="example2" class="table table-hover table-bordered" style="width: 100%;">
                                         <thead class="thead-primary">
