--- a/administrator/AgendaPegawai.html
+++ b/administrator/AgendaPegawai.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="aside-loggedin-user">
                         <a href="#loggedinMenu" class="d-flex align-items-center justify-content-between mg-b-2" data-bs-toggle="collapse">
-                            <h6 class="tx-semibold mg-b-0">Tri Akhyari Romadhon</h6>
+                            <h6 class="tx-semibold mg-b-0">John Doe</h6>
                             <i data-feather="chevron-down"></i>
                         </a>
                         <p class="tx-color-03 tx-12 mg-b-0">Super Administrator</p>
@@ -238,7 +238,7 @@
                             <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
                             <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
                             <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
-                            <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
+                            <li><a href="RiwayatLogAbsensi.html">Log Absensi Mobile</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -288,7 +288,7 @@
                                                         <label for="formGroup" class="d-block">SKPD</label>
                                                         <select class="form-select select2">
                                                             <option label="Pilih SKPD"></option>
-                                                            <option value="Dinas">Dinas Kantor</option>
+                                                            <option value="Dinas" selected>Dinas Pendidikan</option>
                                                             <option value="WFH">Work From Home (WFH)</option>
                                                             <option value="WFA">Work From Anyware (WFA)</option>
                                                         </select>
@@ -378,11 +378,13 @@
                                             <tr>
                                                 <td class="text-end">1</td>
                                                 <td>
-                                                    <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
-                                                    <p class="tx-12 mg-b-10">196708142001121002</p>
+                                                    <a href="AgendaDetailPegawai.html">
+                                                        <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
+                                                        <p class="tx-12 mg-b-10 tx-dark">196708142001121002</p>
+                                                    </a>
                                                 </td>
                                                 <td class="text-start">PNS</td>
-                                                <td class="text-start">Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
+                                                <td class="text-start">Dinas Pendidikan - Analis Sumber Daya Manusia Aparatur Ahli Muda</td>
                                                 <td class="text-end">1</td>
                                                 <td class="text-end">1</td>
                                                 <td class="text-end">1</td>
