--- a/administrator/PengajuanDinas.html
+++ b/administrator/PengajuanDinas.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="aside-loggedin-user">
                         <a href="#loggedinMenu" class="d-flex align-items-center justify-content-between mg-b-2" data-bs-toggle="collapse">
-                            <h6 class="tx-semibold mg-b-0">Tri Akhyari Romadhon</h6>
+                            <h6 class="tx-semibold mg-b-0">John Doe</h6>
                             <i data-feather="chevron-down"></i>
                         </a>
                         <p class="tx-color-03 tx-12 mg-b-0">Super Administrator</p>
@@ -166,7 +166,7 @@
 
                     <!-- Pengajuan Ketidakhadiran -->
                     <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
-                    <li class="nav-item with-sub">
+                    <li class="nav-item with-sub active show">
                         <a href="" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas</span></a>
                         <ul>
                             <li class="active"><a href="PengajuanDinas.html">Pengajuan</a></li>
@@ -239,7 +239,7 @@
                             <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
                             <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
                             <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
-                            <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
+                            <li><a href="RiwayatLogAbsensi.html">Log Absensi Mobile</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -449,7 +449,7 @@
                     </div>
                     <div class="row row-xs">
                         <div class="col-sm-12 col-lg-12">                            
-                            <div data-label="List Data Pengajuan Dinas" class="df-example demo-table">
+                            <div data-label="Data Pengajuan Dinas" class="df-example demo-table">
                                 <!-- row -->
                                 <div class="modal fade" id="ModalHapus" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
                                     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
