--- a/administrator/ShiftTambahan.html
+++ b/administrator/ShiftTambahan.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="aside-loggedin-user">
                     <a href="#loggedinMenu" class="d-flex align-items-center justify-content-between mg-b-2" data-bs-toggle="collapse">
-                    <h6 class="tx-semibold mg-b-0">Tri Akhyari Romadhon</h6>
+                    <h6 class="tx-semibold mg-b-0">John Doe</h6>
                     <i data-feather="chevron-down"></i>
                     </a>
                     <p class="tx-color-03 tx-12 mg-b-0">Super Administrator</p>
@@ -238,7 +238,7 @@
                     <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
                     <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
                     <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
-                    <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
+                    <li><a href="RiwayatLogAbsensi.html">Log Absensi Mobile</a></li>
                     </ul>
                 </li>
                 </ul>
@@ -436,7 +436,7 @@
                                     </div>
                                 </div>
                                 </div>
-                            <div data-label="List Data Shift Tambahan" class="df-example demo-table">                                                  
+                            <div data-label="Data Shift Tambahan" class="df-example demo-table">                                                  
                                 <!-- row -->
                                 <div class="modal fade" id="ModalHapus" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
                                     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
