--- a/administrator/dashboard-harian.html
+++ b/administrator/dashboard-harian.html
@@ -55,7 +55,7 @@
   <body>
     <aside class="aside aside-fixed">
       <div class="aside-header">
-        <a href="../index.html" class="aside-logo">K-<span>Mob</span></a>
+        <a href="../index.html" class="aside-logo">S-<span>ignal</span></a>
         <a href="" class="aside-menu-link">
           <i data-feather="menu"></i>
           <i data-feather="x"></i>
