--- a/administrator/PengajuanDinas.html
+++ b/administrator/PengajuanDinas.html
@@ -199,19 +199,19 @@
                     <!-- Monitoring Absensi -->
                     <li class="nav-label mg-t-25">Monitoring Absensi</li>
                     <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
-                        <ul>
-                            <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
-                            <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item with-sub">
-                        <a href="" class="nav-link"><i data-feather="clock"></i> <span>Jadwal Pegawai</span></a>
-                        <ul>
-                            <li><a href="JadwalUtama.html">Jadwal Utama</a></li>
-                            <li><a href="JadwalTambahan.html">Jadwal Tambahan</a></li>
-                        </ul>
-                    </li>
+            <a href="" class="nav-link"><i data-feather="clock"></i> <span>Shift Pegawai</span></a>
+            <ul>
+              <li><a href="ShiftUtama.html">Shift Utama</a></li>
+              <li><a href="ShiftTambahan.html">Shift Tambahan</a></li>
+            </ul>
+          </li>
+          <li class="nav-item with-sub">
+            <a href="" class="nav-link"><i data-feather="archive"></i> <span>Agenda Absensi</span></a>
+            <ul>
+              <li><a href="AgendaSKPD.html">Agenda SKPD</a></li>
+              <li><a href="AgendaPegawai.html">Agenda Pegawai</a></li>
+            </ul>
+          </li>
                     <li class="nav-item">
                         <a href="KeluarKantor.html" class="nav-link"><i data-feather="external-link"></i> <span>Keluar Kantor</span></a>
                     </li>
